--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog</title>
+    <title>Free Advice | Where thoughts meets Knowledge</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -75,7 +75,7 @@
                     <div class="site-heading">
                         <h1>FREE ADVICE</h1>
                         <hr class="small">
-                        <span class="subheading">Come and Take Knowledge that can change how you perform things</span>
+                        <span class="subheading">Come and Take Knowledge that may change how you perform things</span>
                     </div>
                 </div>
             </div>
